--- a/css/cachuzo.css
+++ b/css/cachuzo.css
@@ -14,7 +14,7 @@
 }
 
 h1 {
-    font-family: "Permanent Marker";
+    font-family: Verdana, arial, Tahoma, sans-serif;
     color: orange;
     background-color: #006600;
     text-align: center;
@@ -130,6 +130,22 @@ body {
     background-color: #006600;
 }
 
+.nav__btn {
+    color: rgb(254, 232, 176);
+    background-color: #006600;
+    text-align: center;
+    font-size: 2rem;
+}
+
+.nav__btn:hover {
+    color: blue;
+    background-color: #006600;
+    text-align: center;
+    font-size: 2rem;
+    animation: tagEffect 3s infinite;
+    animation-timing-function: cubic-bezier(1, 0, 0, 1);
+}
+
 main {
    /* max-width: 800px;*/
     width: 90%;
@@ -197,44 +213,32 @@ main {
     padding: 0%;
    /* overflow: auto;*/
 }
-.contenedor .main .botones{
-    grid-area: main;
+
+.contenedor .sidebar {
+    grid-area: sidebar;
     background-color: #006600;
-    color: orange;
-    display: inline;
-    /*position: fixed;*/
-    height: 78vh;
-    margin-top: 1vh;
-    /*border: cyan solid 2px;*/
+    color: white;
+    border: red solid 2px;
+    margin: 0%;
     padding: 0%;
-   /* overflow: auto;*/
 }
 
-.contenedor .main .imagenes {
-    grid-area: main;
+.contenedor .bloque1 {
+    grid-area: bloque1;
     background-color: #006600;
-    color: orange;
-    height: 78vh;
-    margin-top: 1vh;
-    display: inline;
-   /* border: cyan solid 2px;*/
+    color: white;
+    border: red solid 2px;
+    margin: 0%;
     padding: 0%;
-    overflow: scroll;
-    margin-bottom: 0px;
-}
-.contenedor .main .caja {
-    grid-area: main;
-    background-color: #200066;
-    color: rgb(208, 0, 255);
-    /*height: 78vh;*/
-    margin-top: 1vh;
-    display: inline;
-    border: cyan solid 20px;
-    padding: 0%;
-    overflow: scroll;
-    margin-bottom: 0px;
 }
 
+.contenedor .bloque2 {
+    grid-area: bloque2;
+    background-color: antiquewhite;
+    color: black;
+    height: 15vh;
+    border: red solid 2px;
+}
 
 .contenedor .footer {
     grid-area: footer;
@@ -573,6 +577,173 @@ main {
 }
 
 /*------------------------------------*/
+/*--------------------------*/
+/*CARROUSEL*/
+* {
+    box-sizing: border-box
+}
+
+body {
+    margin: 0
+}
+
+.mySlides {
+    display: none
+}
+
+img {
+    vertical-align: middle
+     border 3px solid red
+}
+
+/* Slideshow container */
+.slideshow-container {
+    max-width: 600px;
+    position: relative;
+    margin: auto;
+}
+
+/* Next & previous buttons */
+.prev,
+.next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    padding: 16px;
+    margin-top: -22px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover,
+.next:hover {
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+/* Caption text */
+.text {
+    color: white;
+    font-size: 30px;
+    padding: 8px 12px;
+    position: center;
+    bottom: 8px;
+    width: 100%;
+    text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+    color: #f2f2f2;
+    font-size: 12px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+}
+
+.active,
+.dot:hover {
+    background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+    animation-name: fade;
+    animation-duration: 1.5s;
+}
+
+@keyframes fade {
+    from {
+        opacity: .4
+    }
+
+    to {
+        opacity: 1
+    }
+}
+
+/*--------------------------------*/
+
+/*---------ESPECIFICO DE BIO---------------*/
+#producere87_selfie {
+    background-color: #006600;
+    text-align: center;
+    /*    border: 3px solid red;*/
+    width: 495px;
+    height: 373px;
+}
+
+#producer_E87_portrait {
+    background-color: #006600;
+    text-align: center;
+    width: 500px;
+    height: 400px;
+    border: 3px solid red;
+}
+
+#contenedor_texto_bio {
+    background-color: blue;
+    color: azure;
+    /*border: 3px solid */;
+}
+
+#face_icon {
+    width: 30px;
+    height: 30px;
+    display: inline-block;
+    margin-left: 0px;
+    margin-right: 50px;
+    margin-top: 15px;
+}
+
+#insta_icon {
+    width: 30px;
+    height: 30px;
+    display: inline-block;
+    margin-left: 0px;
+    margin-right: 50px;
+}
+
+#twitter_icon {
+    width: 30px;
+    height: 30px;
+    display: inline-block;
+    margin-left: 0px;
+    margin-right: 50px;
+}
+
+#youtube_icon {
+    width: 40px;
+    height: 40px;
+    display: inline-block;
+    margin-left: 0px;
+    margin-right: 50px;
+
+}
+
 /* ----- -----  Mediaqueries ----- ----- */
 /*----Landscape (max-width: 650px) and (max-height:400px -----*/
 @media (orientation:landscape) and (max-width: 650px) and (max-height:400px) {
@@ -687,11 +858,39 @@ main {
         color: orange;
         height: 78vh;
         margin-top: 1vh;
-        display: inline;
-       /* border: cyan solid 2px;*/
+        border: cyan solid 2px;
         padding: 0%;
-        overflow: scroll;
+        /*overflow: scroll;*/
         margin-bottom: 0px;
+    }
+
+
+    .contenedor .sidebar {
+        grid-area: sidebar;
+        background-color: #006600;
+        color: white;
+        border: red solid 2px;
+        margin: 0%;
+        padding: 0%;
+        /*overflow: scroll;*/
+    }
+
+    .contenedor .bloque1 {
+        grid-area: bloque1;
+        background-color: #006600;
+        color: white;
+        border: red solid 2px;
+        margin: 0%;
+        padding: 0%;
+        /*overflow: scroll;*/
+    }
+
+    .contenedor .bloque2 {
+        grid-area: bloque2;
+        background-color: antiquewhite;
+        color: black;
+        height: 15vh;
+        border: red solid 2px;
     }
 
     .contenedor .footer {
@@ -715,6 +914,81 @@ main {
 
     }
 
+    /*---------ESPECIFICO DE BIO---------------*/
+    #producere87_selfie {
+        background-color: #006600;
+        text-align: auto;
+        /*border: 3px solid orangered*/;
+        width: 200px;
+        height: 200px;
+        margin-bottom: 0px;;
+
+    }
+
+    #producer_E87_portrait {
+        background-color: #006600;
+        text-align: auto;
+        width: 200px;
+        height: 200px;
+        border: 0px;
+    }
+
+    #contenedor_texto_bio,
+    h2 {
+        font-family: "Permanent Marker", cursive;
+        margin-top: 0px;
+        background-color: #006600;
+        color: orange;
+        font-size: 0.81rem;
+    }
+    #face_icon {
+        width: 20px;
+        height: 20px;
+        display: inline-block;
+        margin-left: 0px;
+        margin-right: 50px;
+        margin-top: 15px;
+    }
+    
+    #insta_icon {
+        width: 20px;
+        height: 20px;
+        display: inline-block;
+        margin-left: 0px;
+        margin-right: 50px;
+    }
+    
+    #twitter_icon {
+        width: 20px;
+        height: 20px;
+        display: inline-block;
+        margin-left: 0px;
+        margin-right: 50px;
+    }
+    
+    #youtube_icon {
+        width: 30px;
+        height: 30px;
+        display: inline-block;
+        margin-left: 0px;
+        margin-right: 50px;
+    
+    }
+    /* -----------------------------*/
 }
 
 
+/* , es para OR */
+/*
+@media (orientation:landscape) and (max-width:400px){
+    .main .waiting_title {
+        font-size: 2rem;
+    }
+}
+
+@media (orientation:portrait){
+    .main .waiting_title {
+        font-size: 2rem;
+    }  
+}
+*/
