--- a/css/estilos.css
+++ b/css/estilos.css
@@ -181,8 +181,17 @@ nav {
     font-size: 2rem;
 }
 
+ #label{
+    font-family: "Permanent Marker";
+    color: rgb(255, 165, 0);
+    background-color: #006600;
+    text-align: center;
+    font-size: 3rem;
+}
+
+
 .nav__btn:hover {
-    color: blue;
+    color: rgb(122, 197, 246);
     background-color: #006600;
     text-align: center;
     font-size: 2rem;
@@ -1126,6 +1135,22 @@ iframe {
     animation: tagEffectInMotion 3s infinite;
     animation-timing-function: cubic-bezier(1, 0, 0, 1);
 }
+
+
+.ProducerE87_Tag {
+    /*background-color: rgba(33, 16, 139, 0.5) !important;*/
+    font-size: 4rem;
+    font-family: "Permanent Marker";
+    text-align: center;
+    margin: 0px;
+    margin-left: 20px;
+    padding: 0px;
+    animation: tagEffectInMotion 3s infinite;
+    animation-timing-function: cubic-bezier(1, 0, 0, 1);
+    
+}
+
+
 /*-----------PLAYER LAND--------- */
 
 .player_btn {
