--- a/css/steps.css
+++ b/css/steps.css
@@ -726,7 +726,7 @@ input:focus {
 }
 
 label {
-    display: block;
+    display: inline;
     font-weight: 700;
     padding: 0px;
     cursor: pointer;
