--- a/css/noads.css
+++ b/css/noads.css
@@ -108,45 +108,11 @@ a:visited {
     color: rgb(254, 232, 176);
 }
 
-
-/*
-div{
-    width: 100px;
-    height: 100px;
-    background-color:lightskyblue;
-    border: 1px solid black;
-    margin-bottom: 50px;
-
-    transition-property: width;
-    transition-duration: 5s;
-    transition-delay: 1s;
-    transition-timing-function: ease-in;
-
-    transition-property: color;
-    transition-duration: 5s;
-    transition-delay: 0.5s;
-    transition-timing-function: ease-in;
-
-}
-
-div:hover{
-    width: 500px;
-}
-
-
-a:hover{
-    background-color: brown;
-    padding: 50px;
-    transition-property: all;
-    transition-duration: 4s;
-    transition-timing-function: ease-in;
-}
-*/
 /*--------ETIQUETAS SEMANTICAS------------*/
 
 header {
     font-family: "Permanent Marker";
-    background-color: #ffffff;
+    background-color: #0d6804;
     font-size: 5rem;
     text-align: center;
     margin-top: 0%;
@@ -159,18 +125,8 @@ body {
     font-family: "Permanent Marker";
     /*Garamond, arial, Tahoma, sans-serif */
     color: orange;
-    background-color: #ffffff;
+    background-color: #0d6804;
 }
-
-/*
-nav {
-    font-family: 'Sedgwick Ave Display';
-    font-size: 1.5rem;
-    color: orange;
-    background-color: #ffffff;
-    text-align: center;
-}
-*/
 
 .nav__btn {
     color: rgb(254, 232, 176);
@@ -191,6 +147,7 @@ nav {
 main {
    /* max-width: 800px;*/
     width: 98%;
+    background-color: #0d6804;
    /* margin: auto;*/
     /* padding: 40px;*/
 }
@@ -199,6 +156,7 @@ main {
 /*-------------GRID AREAS------------*/
 html {
     font-size: 62.5%;
+    background-color: #0d6804;
     /*10px*/
 }
 
@@ -208,7 +166,7 @@ html {
     max-height: 180rem;*/
     display: grid;
     padding: 0%;
-    background-color: #ffffff;
+    background-color: #0d6804;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(6, auto);
     grid-template-areas:
@@ -227,7 +185,7 @@ html {
 .contenedor .header {
     font-family: "Permanent Marker";
     grid-area: cabeza;
-    background-color: #ffffff;
+    background-color: #0d6804;
     color: orange;
     height: 12vh;
     width: 70%;
@@ -242,7 +200,7 @@ html {
 .contenedor .nav {
     font-family: "Permanent Marker", cursive;
     grid-area: nav;
-    background-color: #ffffff;
+    background-color: #0d6804;
     color: white;
     height: 6vh;
     width: 100vh;
@@ -253,7 +211,7 @@ html {
 
 .contenedor .main {
     grid-area: main;
-    background-color: #ffffff;
+    background-color: #0d6804;
     height: 97vh;
     /*margin-top: 1vh;*/
     border: white solid 20px;
@@ -264,7 +222,7 @@ html {
 
 .contenedor .sidebar {
     grid-area: sidebar;
-    background-color: #ffffff;
+    background-color: #0d6804;
     color: white;
     border: red solid 2px;
     margin: 0%;
@@ -290,7 +248,7 @@ html {
 
 .contenedor .footer {
     grid-area: footer;
-    background-color: #ffffff;
+    background-color: #0d6804;
     color: orange;
     width: 100%;
     height: 14vh;
@@ -340,7 +298,7 @@ p+h3 {
 iframe {
     height: 800px;
     width: 846px;
-    margin-left: 150px;
+    margin-left: 20px;
     display: inline-block;
 }
 
