--- a/css/noads.css
+++ b/css/noads.css
@@ -172,9 +172,9 @@ html {
     grid-template-areas:
         "cabeza   cabeza   cabeza cabeza"
         "nav       nav      nav     nav"
-        "main   main    main   main"
-        "main   main    main   main"
-        "main  main  main   main"
+        "main   main    main   sidebar"
+        "main   main    main   sidebar"
+        "main  main  main   sidebar"
         "footer   footer    footer footer";
     /*margin-right: auto;
     margin-left: auto;*/
@@ -185,7 +185,7 @@ html {
 .contenedor .header {
     font-family: "Permanent Marker";
     grid-area: cabeza;
-    background-color: #0d6804;
+      background-color: #006600;
     color: orange;
     height: 12vh;
     width: 70%;
@@ -200,7 +200,7 @@ html {
 .contenedor .nav {
     font-family: "Permanent Marker", cursive;
     grid-area: nav;
-    background-color: #0d6804;
+      background-color: #006600;
     color: white;
     height: 6vh;
     width: 100vh;
@@ -211,7 +211,7 @@ html {
 
 .contenedor .main {
     grid-area: main;
-    background-color: #0d6804;
+      background-color: #006600;
     height: 97vh;
     /*margin-top: 1vh;*/
     border: white solid 20px;
@@ -222,9 +222,9 @@ html {
 
 .contenedor .sidebar {
     grid-area: sidebar;
-    background-color: #0d6804;
+      background-color: #006600;
     color: white;
-    border: red solid 2px;
+    border: red solid 20px;
     margin: 0%;
     padding: 0%;
 }
@@ -248,7 +248,7 @@ html {
 
 .contenedor .footer {
     grid-area: footer;
-    background-color: #0d6804;
+      background-color: #006600;
     color: orange;
     width: 100%;
     height: 14vh;
