--- a/css/noads.css
+++ b/css/noads.css
@@ -48,7 +48,7 @@ h4 {
 
 h5 {
     /*PALETA COPADA*/
-  /*  background-color: rgb(249, 123, 34);*/
+    /*  background-color: rgb(249, 123, 34);*/
     /*#F97B22*/
     /*background-color: rgb(254, 232, 176);*/
     /*#FEE8B0*/
@@ -67,47 +67,6 @@ h6 {
     font-size: 2rem;
 }
 
-/*-|-----ENLACES---------------------*/
-a {
-    font-family: "Permanent Marker", cursive;
-    text-decoration: none;
-    color: rgb(254, 232, 176);
-    /*background-color: #006600;*/
-    text-align: center;
-    font-size: 2.3rem;
-    margin-right: 5px;
-}
-
-a:hover {
-    /*font-style: oblique;*/
-    color: white;
-    background-color: #006600;
-    /*
-    animation: tagEffect 3s infinite;
-    animation-timing-function: cubic-bezier(1, 0, 0, 1);
-*/
-
-    /*padding: 0px;*/
-    /*
-    transition-property: all;
-    transition-duration: 0.3s;
-    transition-timing-function: ease-in;
-*/
-}
-
-a:link {
-    color: red;
-    background-color: #006600;
-}
-
-a:active {
-    background-color: #006600;
-}
-
-a:visited {
-    color: rgb(254, 232, 176);
-}
-
 /*--------ETIQUETAS SEMANTICAS------------*/
 
 header {
@@ -117,56 +76,35 @@ header {
     text-align: center;
     margin-top: 0%;
     padding: 0%;
-    animation: tagEffect 3s infinite;
-    animation-timing-function: cubic-bezier(1, 0, 0, 1);
 }
 
 body {
     font-family: "Permanent Marker";
     /*Garamond, arial, Tahoma, sans-serif */
-    color: orange;
+    color: white;
     background-color: #0d6804;
-}
-
-.nav__btn {
-    color: rgb(254, 232, 176);
-    background-color: #ffffff;
-    text-align: center;
-    font-size: 2rem;
-}
-
-.nav__btn:hover {
-    color: blue;
-    background-color: #ffffff;
-    text-align: center;
-    font-size: 2rem;
-    animation: tagEffect 3s infinite;
-    animation-timing-function: cubic-bezier(1, 0, 0, 1);
 }
 
 main {
-   /* max-width: 800px;*/
     width: 98%;
+    height: 78%;
     background-color: #0d6804;
-   /* margin: auto;*/
-    /* padding: 40px;*/
 }
 
 /*--------------------------------*/
 /*-------------GRID AREAS------------*/
 html {
-    font-size: 62.5%;
-    background-color: #0d6804;
-    /*10px*/
+    font-size: 52.5%;
+    background-color: #95e18e;
 }
 
 .contenedor {
+    width: 98%;
+    height: 98%;
     font-family: "Permanent Marker", cursive;
-  /*  max-width: 90rem;
-    max-height: 180rem;*/
     display: grid;
     padding: 0%;
-    background-color: #0d6804;
+    background-color: #7fa9f0;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(6, auto);
     grid-template-areas:
@@ -176,93 +114,40 @@ html {
         "main   main    main   sidebar"
         "main  main  main   sidebar"
         "footer   footer    footer footer";
-    /*margin-right: auto;
-    margin-left: auto;*/
     gap: 0.1%;
-
 }
 
 .contenedor .header {
     font-family: "Permanent Marker";
     grid-area: cabeza;
-      background-color: #006600;
+    background-color: #006600;
     color: orange;
     height: 12vh;
     width: 70%;
-    text-align: center;
-    font-size: 5rem;
+    text-align: left;
+    font-size: 3rem;
     margin-top: 0%;
     margin-bottom: 10px;
     padding: 0%;
-    /*border: red solid 2px;*/
-}
-
-.contenedor .nav {
-    font-family: "Permanent Marker", cursive;
-    grid-area: nav;
-      background-color: #006600;
-    color: white;
-    height: 6vh;
-    width: 100vh;
-    text-align: center;
-    margin-top: 0%;
-    /*border: red solid 1px;*/
+    border: red solid 2px;
 }
 
 .contenedor .main {
     grid-area: main;
-      background-color: #006600;
-    height: 97vh;
-    /*margin-top: 1vh;*/
-    border: white solid 20px;
+    background-color: #006600;
+    height: 98vh;
+    border: white solid 5px;
     padding: 0%;
-  
-    /*overflow:scroll;*/
 }
 
 .contenedor .sidebar {
     grid-area: sidebar;
-      background-color: #006600;
+    background-color: #006600;
     color: white;
-    border: red solid 20px;
-    margin: 0%;
-    padding: 0%;
-}
-
-.contenedor .bloque1 {
-    grid-area: bloque1;
-    background-color: #ffffff;
-    color: white;
+    height: 98vh;
     border: red solid 2px;
     margin: 0%;
     padding: 0%;
-}
-
-.contenedor .bloque2 {
-    grid-area: bloque2;
-    background-color: #ffffff;
-    color: black;
-    height: 15vh;
-    border: red solid 2px;
-}
-
-.contenedor .footer {
-    grid-area: footer;
-      background-color: #006600;
-    color: orange;
-    width: 100%;
-    height: 14vh;
-    margin-top: 0%;
-    border: red solid 2px;
-    text-align: center;
-}
-
-/*--------------------------------------*/
-.header:hover {
-
-    font-size: 5rem;
-    animation: tagEffect 3s infinite;
-    animation-timing-function: cubic-bezier(1, 0, 0, 1);
 }
 
 h5 {
@@ -281,18 +166,6 @@ p+h3 {
     font-family: "Permanent Marker", cursive;
     color: rgba (255, 165, 0, 0.7);
     font-size: 4rem;
-    animation: tagEffect 3s infinite;
-    animation-timing-function: cubic-bezier(1, 0, 0, 1);
-}
-
-.footer .icono {
-    display: inline-block;
-    margin-left: 60px;
-}
-
-.sidebar_iframe {
-    margin-left: 50px;
-    /*display: inline-block;*/
 }
 
 iframe {
@@ -302,10 +175,98 @@ iframe {
     display: inline-block;
 }
 
-.yt1{
-    width: 1825px;
-    height: 852px;
-    margin:0px;
 
+#carpeta {
+    border: rgb(9, 66, 2) solid 2px;
 }
 
+
+
+/* ----- -----  Mediaqueries ----- ----- */
+/*----Landscape (max-width: 650px) and (max-height:400px -----*/
+@media (orientation:landscape) and (max-width: 650px) and (max-height:400px) {
+
+
+    .main h2 {
+        font-size: 0.98rem;
+        font-family: Garamond;
+        font-style: oblique;
+        font-weight: 900;
+        color: orange;
+        background-color: #006600;
+    }
+
+    .contenedor {
+        font-family: "Permanent Marker", cursive;
+        max-width: 90rem;
+        max-height: 180rem;
+        display: grid;
+        padding: 0%;
+        background-color: #006600;
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: repeat(6, auto);
+        grid-template-areas:
+            "cabeza   cabeza   cabeza cabeza"
+            "nav       nav      nav     nav"
+            "bloque1   main    main   sidebar"
+            "bloque1   main    main   sidebar"
+            "bloque1  main  main   sidebar"
+            "footer   footer    footer footer";
+        margin-right: auto;
+        margin-left: auto;
+        gap: 0.1%;
+        border: double solid blue 5px;
+
+    }
+
+    header {
+        font-family: "Permanent Marker";
+        background-color: rgba(0, 102, 0, 1);
+        font-size: 5rem;
+        text-align: center;
+        margin-top: 0%;
+        padding: 0%;
+        width: 100%;
+    }
+
+    .contenedor .header {
+        font-family: "Permanent Marker";
+        grid-area: cabeza;
+        background-color: #006600;
+        color: orange;
+        font-size: 2rem;
+        height: 12vh;
+        width: 100vw;
+        text-align: auto;
+        overflow-y: auto;
+        margin-top: 0%;
+        margin-bottom: 0px;
+        margin-left: 0px;
+        padding: 0%;
+        position: relative;
+        left: auto;
+        top: -5px;
+    }
+
+    .contenedor .main {
+        grid-area: main;
+        background-color: #006600;
+        color: orange;
+        height: 78vh;
+        margin-top: 1vh;
+        padding: 0%;
+        overflow: scroll;
+        margin-bottom: 0px;
+    }
+
+    .contenedor .sidebar {
+        grid-area: sidebar;
+        background-color: #006600;
+        color: white;
+        border: red solid 2px;
+        margin: 0%;
+        padding: 0%;
+        overflow: scroll;
+        text-align: center;
+    }
+}
