--- a/css/noads.css
+++ b/css/noads.css
@@ -148,6 +148,9 @@ html {
     border: red solid 2px;
     margin: 0%;
     padding: 0%;
+  overflow-y: scroll; /* Fuerza el scroll vertical */
+  /* overflow-x: hidden; Para ocultar el horizontal */
+
 }
 
 h5 {
